tests/snapshots/tui_snapshot_test__tui_error_state.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────╮
│ ⚡ ENTRENAR v0.5.6                         [● FAIL: 00:01:00] 30 tok/s │
├───────────────────────────────────────┬──────────────────────────────────────┤
│ 📉 LOSS CURVE                         │ 🖥️  GPU: NVIDIA GeForce RTX 4090     │
│ ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸⣿⣿⣿ 15.00 ↑        │ █████░░░░░░░░░░░ 35% 45°C 110W       │
│ min:5.00 max:15.00 avg:7.48          │ VRAM ░░░░░░░░░░░ 2.1G/24G 9%         │
│                                      │ ──────────────────────────────────── │
│ 📊 GRADIENT NORM                      │ 📊 PROCESS                            │
│ ████████████████████████ 1000.00 ↑   │ (no process detected)                │
│                                      │                                      │
├───────────────────────────────────────┼──────────────────────────────────────┤
│ 📝 SAMPLE PREVIEW                     │ 📈 TRAINING METRICS                   │
│ In: fn is_prime(n: u64) -> bool ...  │ Epoch ███░░░░░░░░ 5/15 33%           │
│ Tgt: #[test] fn test_is_prime() {... │ Step  █████░░░░░░ 8/16 50%           │
│ Gen: (training...)                   │ LR 0.000600 ↑  Grad 1000.00 ↑        │
│ Match: ░░░░░░░░░░░░░░░░░░░░░ 0%      │ Loss 15.000 ↓ best:5.00 ETA 00:02:20 │
╰───────────────────────────────────────┴──────────────────────────────────────╯
