tests/snapshots/tui_snapshot_test__tui_final_state.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
┌──────────────────────────────────────────────────────────────────────────────┐
│  Entrenar Fine-Tuner v0.5.6                             [Completed: 00:01:00]  │
├───────────────────────────────────────┬──────────────────────────────────────┤
│  Loss Curve (Log Scale)              │  Hardware Telemetry                 │
│  ⡁⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  │  GPU: NVIDIA GeFo ████░░░░░░░░  35% │
│  ⠀⠂⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  │  VRAM: ░░░░░░░░░░ 2.1/24GB          │
│  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  │  Temp: 45°C                         │
│  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  │  Power: 110W/480W                   │
│  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  │                                     │
│  ⠀⠀⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  │                                     │
├───────────────────────────────────────┼──────────────────────────────────────┤
│  Latest Sample                      │  Training State                     │
│  Input:  fn is_prime(n: u64) -> ...  │  Epoch: 15/15                       │
│  Target: #[test] fn test_is_prim...  │  Step:  16/16                       │
│  Gen:    (training...)               │  LR:    6.00e-4                     │
│  Match:  0.0%                        │  Grad:  2.500                       │
└───────────────────────────────────────┴──────────────────────────────────────┘
