tests/snapshots/tui_snapshot_test__tui_initial_state.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────╮
│ ⚡ ENTRENAR v0.5.6                      [● Running: 00:01:00] 30 tok/s │
├───────────────────────────────────────┬──────────────────────────────────────┤
│ 📉 LOSS CURVE                         │ 🖥️  GPU: NVIDIA GeForce RTX 4090     │
│ ⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣦⣤⣤⣤⣀⣀⣀⣸⣿⣿⣿ 6.90 ↓         │ █████░░░░░░░░░░░ 35% 45°C 110W       │
│ min:5.00 max:6.90 avg:6.13           │ VRAM ░░░░░░░░░░░ 2.1G/24G 9%         │
│                                      │ ──────────────────────────────────── │
│ 📊 GRADIENT NORM                      │ 📊 PROCESS                            │
│ ██████░░░░░░░░░░░░░░░░░░ 2.50 →      │ (no process detected)                │
│                                      │                                      │
├───────────────────────────────────────┼──────────────────────────────────────┤
│ 📝 SAMPLE PREVIEW                     │ 📈 TRAINING METRICS                   │
│ In: fn is_prime(n: u64) -> bool ...  │ Epoch ░░░░░░░░░░░ 1/15 7%            │
│ Tgt: #[test] fn test_is_prime() {... │ Step  ░░░░░░░░░░░ 1/16 6%            │
│ Gen: (training...)                   │ LR 0.000600 ↓  Grad 2.50 ↓           │
│ Match: ░░░░░░░░░░░░░░░░░░░░░ 0%      │ Loss 6.900 ↓ best:5.00 ETA 03:59:00  │
╰───────────────────────────────────────┴──────────────────────────────────────╯
