tests/snapshots/tui_snapshot_test__tui_no_gpu.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────╮
│ ⚡ ENTRENAR v0.5.6                      [● Running: 00:01:00] 30 tok/s │
├───────────────────────────────────────┬──────────────────────────────────────┤
│ 📉 LOSS CURVE                         │ 🖥️  GPU: N/A                         │
│ ⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣦⣤⣤⣤⣀⣀⣀⣠⣤⣤⣤ 5.50 ↓         │ (GPU monitoring unavailable)         │
│ min:5.00 max:6.90 avg:5.90           │                                      │
│                                      │ ──────────────────────────────────── │
│ 📊 GRADIENT NORM                      │ 📊 PROCESS                            │
│ ██████░░░░░░░░░░░░░░░░░░ 2.50 →      │ (no GPU process)                     │
│                                      │                                      │
├───────────────────────────────────────┼──────────────────────────────────────┤
│ 📝 SAMPLE PREVIEW                     │ 📈 TRAINING METRICS                   │
│ In: fn is_prime(n: u64) -> bool ...  │ Epoch ██░░░░░░░░░ 3/15 20%           │
│ Tgt: #[test] fn test_is_prime() {... │ Step  ███░░░░░░░░ 5/16 31%           │
│ Gen: (training...)                   │ LR 0.000600 ↓  Grad 2.50 ↓           │
│ Match: ░░░░░░░░░░░░░░░░░░░░░ 0%      │ Loss 5.500 ↓ best:5.00 ETA 00:05:29  │
╰───────────────────────────────────────┴──────────────────────────────────────╯
