tests/snapshots/tui_snapshot_test__tui_no_sample.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────╮
│ ⚡ ENTRENAR v0.5.6                      [● Running: 00:01:00] 30 tok/s │
├───────────────────────────────────────┬──────────────────────────────────────┤
│ 📉 LOSS CURVE                         │ 🖥️  GPU: NVIDIA GeForce RTX 4090     │
│ ⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣦⣤⣤⣤⣀⣀⣀⣰⣶⣶⣶ 6.20 ↓         │ █████░░░░░░░░░░░ 35% 45°C 110W       │
│ min:5.00 max:6.90 avg:6.02           │ VRAM ░░░░░░░░░░░ 2.1G/24G 9%         │
│                                      │ ──────────────────────────────────── │
│ 📊 GRADIENT NORM                      │ 📊 PROCESS                            │
│ ██████░░░░░░░░░░░░░░░░░░ 2.50 →      │ (no process detected)                │
│                                      │                                      │
├───────────────────────────────────────┼──────────────────────────────────────┤
│ 📝 SAMPLE PREVIEW                     │ 📈 TRAINING METRICS                   │
│ (waiting for sample...)              │ Epoch █░░░░░░░░░░ 2/15 13%           │
│                                      │ Step  ██░░░░░░░░░ 3/16 19%           │
│                                      │ LR 0.000600 ↓  Grad 2.50 ↓           │
│                                      │ Loss 6.200 ↓ best:5.00 ETA 00:11:37  │
╰───────────────────────────────────────┴──────────────────────────────────────╯
